Fix: align text to right

--- a/src/components/common/StatusGPS/StatusGPS.module.scss
+++ b/src/components/common/StatusGPS/StatusGPS.module.scss
@@ -3,6 +3,7 @@
 .gpsStatus {
   font-size: ($base-size * 1.05);
   font-weight: bold;
+  text-align: end;
   margin: 0;
   padding: 2px;
   background: rgba(255, 255, 255, 0.7);
